--- a/index.html
+++ b/index.html
@@ -2,32 +2,59 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Мой сайт на GitHub Pages</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Киберпанк Сайт</title>
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { background-color: #0d0d0d; color: #00fffc; font-family: 'Orbitron', sans-serif; padding: 20px; }
+    header, footer { text-align: center; padding: 20px; margin-bottom: 20px; background: linear-gradient(90deg, #ff0066, #00ffff); color: #fff; text-shadow: 0 0 10px #ff0066, 0 0 20px #00ffff; border-radius: 8px; }
+    nav ul { list-style: none; display: flex; justify-content: center; margin-bottom: 20px; }
+    nav ul li { margin: 0 15px; }
+    nav ul li a { text-decoration: none; color: #ff66cc; font-weight: 700; padding: 5px 10px; border: 1px solid #ff66cc; border-radius: 4px; transition: 0.3s; text-shadow: 0 0 5px #ff66cc; }
+    nav ul li a:hover { background: #ff66cc; color: #0d0d0d; box-shadow: 0 0 10px #ff66cc; }
+    .center-image img {
+      display: block;
+      margin: 0 auto 20px;
+      max-width: 80%;
+      border: 1px solid #ff66cc;
+      box-shadow: 0 0 15px #00ffff;
+      border-radius: 8px;
+    }
+    main section { background: rgba(15,15,15,0.8); padding: 20px; border: 1px solid #00ffff; border-radius: 8px; box-shadow: 0 0 10px #00ffff; margin-bottom: 20px; }
+    h1 { font-size: 2.5rem; }
+    h2 { font-size: 2rem; color: #ff66cc; text-shadow: 0 0 5px #ff66cc; margin-bottom: 10px; }
+    a { color: #00ffff; }
+  </style>
 </head>
 <body>
   <header>
-    <h1>Добро пожаловать!</h1>
+    <h1>Добро пожаловать в киберпанк мир!</h1>
   </header>
-
   <nav>
     <ul>
       <li><a href="#">Главная</a></li>
-      <li><a href="#">О нас</a></li>
-      <li><a href="#">Контакты</a></li>
+      <li><a href="#about">О нас</a></li>
+      <li><a href="#contact">Контакты</a></li>
     </ul>
   </nav>
-
   <main>
-    <section>
-      <h2>Заголовок секции</h2>
-      <p>Это базовый шаблон страницы: здесь будет ваш контент.</p>
+    <!-- Центральное изображение -->
+    <div class="center-image">
+      <img src="13c41bab-4793-4efa-b211-b687e7b773fb.png" alt="Киберпанк иллюстрация">
+    </div>
+
+    <section id="about">
+      <h2>О проекте</h2>
+      <p>Это базовый шаблон в стиле киберпанк с неоновыми акцентами и тёмным фоном.</p>
+    </section>
+    <section id="contact">
+      <h2>Связаться с нами</h2>
+      <p>Напишите нам по адресу <a href="mailto:info@example.com">info@example.com</a>.</p>
     </section>
   </main>
-
   <footer>
-    <p>&copy; 2025 Мой сайт</p>
+    <p>&copy; 2025 Киберпанк Сайт</p>
   </footer>
 </body>
 </html>
