--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main>
     <!-- Центральное изображение -->
     <div class="center-image">
-      <img src="13c41bab-4793-4efa-b211-b687e7b773fb.png" alt="Киберпанк иллюстрация">
+      <img src="https://ichef.bbci.co.uk/ace/ws/640/amz/worldservice/live/assets/images/2012/06/16/120616132954_sergei_mavrodi_304x171_rianovosti.jpg.webp" alt="Киберпанк иллюстрация">
     </div>
 
     <section id="about">
