--- a/index.html
+++ b/index.html
@@ -3,54 +3,229 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Криптовалюта</title>
+  <title>Крипто-Лендинг</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background-color: #f9f9f9; color: #333333; font-family: 'Roboto', sans-serif; padding: 20px; }
-    header, footer { text-align: center; padding: 20px; background-color: #ffffff; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); margin-bottom: 20px; }
-    header h1 { font-size: 2.5rem; color: #4a90e2; }
-    footer p { font-size: 0.9rem; color: #777777; }
-    nav ul { list-style: none; display: flex; justify-content: center; gap: 15px; margin-bottom: 30px; }
-    nav ul li a { text-decoration: none; color: #4a90e2; font-weight: 500; padding: 8px 12px; border: 1px solid transparent; border-radius: 4px; transition: background-color 0.3s, color 0.3s; }
-    nav ul li a:hover { background-color: #4a90e2; color: #ffffff; }
-    .center-image img { display: block; margin: 0 auto 30px; max-width: 80%; border-radius: 8px; }
-    main section { background: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); margin-bottom: 30px; }
-    h2 { font-size: 1.8rem; color: #333333; margin-bottom: 15px; }
-    p { line-height: 1.6; margin-bottom: 15px; }
-    .coins { display: grid; grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); gap: 20px; }
-    .coin-card { background: #ffffff; padding: 15px; border: 1px solid #e0e0e0; border-radius: 6px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05); transition: transform 0.3s, box-shadow 0.3s; }
-    .coin-card:hover { transform: translateY(-5px); box-shadow: 0 4px 10px rgba(0,0,0,0.1); }
-    .coin-card img { width: 60px; height: 60px; margin-bottom: 10px; }
-    a { color: #4a90e2; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    ul { list-style: disc inside; margin-bottom: 15px; }
+    body {
+      font-family: 'Roboto', sans-serif;
+      color: #fff;
+      background-image: url('https://source.unsplash.com/1920x1080/?crypto,blockchain');
+      background-size: cover;
+      background-position: center;
+    }
+    .overlay {
+      background: rgba(0, 0, 0, 0.7);
+      min-height: 100vh;
+      padding-top: 60px;
+    }
+    /* Навигация */
+    .header-nav {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: rgba(255, 255, 255, 0.8);
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+      z-index: 1000;
+    }
+    .header-nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      padding: 15px 0;
+    }
+    .header-nav a {
+      color: #333;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+    .header-nav a:hover {
+      color: #4a90e2;
+    }
+    /* Hero */
+    .hero {
+      text-align: center;
+      padding: 100px 20px;
+    }
+    .hero h1 {
+      font-size: 3.5rem;
+      margin-bottom: 20px;
+      text-shadow: 0 2px 5px rgba(0,0,0,0.7);
+    }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 0 auto 30px;
+      color: #ddd;
+    }
+    .cta-button {
+      background: #4a90e2;
+      color: #fff;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 5px;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+    .cta-button:hover {
+      background: #357ABD;
+    }
+    main {
+      padding: 0 20px;
+    }
+    section {
+      padding: 60px 0;
+    }
+    section h2 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 30px;
+      color: #4a90e2;
+    }
+    /* О криптовалюте */
+    #crypto .content {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: center;
+    }
+    #crypto ul {
+      list-style: disc inside;
+      margin-top: 20px;
+      color: #ddd;
+    }
+    /* Возможности */
+    .features-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .feature-card {
+      background: #fff;
+      color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.3s;
+    }
+    .feature-card:hover {
+      transform: translateY(-5px);
+    }
+    .feature-card h3 {
+      margin-bottom: 10px;
+    }
+    /* Популярные монеты */
+    #popular .coins {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+    .coin-card {
+      background: #fff;
+      color: #333;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: center;
+      transition: transform 0.3s;
+    }
+    .coin-card:hover {
+      transform: translateY(-5px);
+    }
+    .coin-card img {
+      width: 60px;
+      height: 60px;
+      margin-bottom: 10px;
+    }
+    /* Графики */
+    #charts canvas {
+      max-width: 800px;
+      display: block;
+      margin: 0 auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    /* Контакты */
+    #contact p {
+      text-align: center;
+      color: #ddd;
+    }
+    a {
+      color: #4a90e2;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      color: #ddd;
+    }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Криптовалюта</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#crypto">Что такое</a></li>
-      <li><a href="#popular">Популярные монеты</a></li>
-      <li><a href="#contact">Контакты</a></li>
-    </ul>
-  </nav>
-  <main>
-    <div class="center-image">
-      <img src="13c41bab-4793-4efa-b211-b687e7b773fb.png" alt="Иллюстрация криптовалюты">
-    </div>
+  <div class="overlay">
+    <header>
+      <nav class="header-nav">
+        <ul>
+          <li><a href="#hero">Главная</a></li>
+          <li><a href="#crypto">Что такое</a></li>
+          <li><a href="#features">Возможности</a></li>
+          <li><a href="#popular">Монеты</a></li>
+          <li><a href="#charts">Графики</a></li>
+          <li><a href="#contact">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id="hero" class="hero">
+      <h1>Добро пожаловать в мир криптовалют</h1>
+      <p>Узнайте основы, популярные монеты и следите за динамикой цен в реальном времени.</p>
+      <a href="#crypto" class="cta-button">Начать</a>
+    </section>
 
     <section id="crypto">
       <h2>Что такое криптовалюта?</h2>
-      <p>Криптовалюта — это цифровая или виртуальная валюта, использующая криптографию для безопасности и управления транзакциями. Она функционирует на основе технологии блокчейн — распределённого реестра, где каждая транзакция закрепляется в «блоках», образующих единую прозрачную цепочку.</p>
-      <ul>
-        <li>Децентрализация без единого центра управления.</li>
-        <li>Прозрачность записей и защита от подделок.</li>
-        <li>Низкие комиссии и быстрые международные переводы.</li>
-      </ul>
+      <div class="content">
+        <p>Криптовалюта — цифровая валюта на основе блокчейна, обеспечивающая безопасность, прозрачность и децентрализацию транзакций.</p>
+        <ul>
+          <li>Децентрализованное управление.</li>
+          <li>Защищённые и прозрачные записи.</li>
+          <li>Низкие комиссии и быстрые переводы.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="features">
+      <h2>Возможности</h2>
+      <div class="features-grid">
+        <div class="feature-card">
+          <h3>DeFi</h3>
+          <p>Децентрализованные финансы без посредников.</p>
+        </div>
+        <div class="feature-card">
+          <h3>NFT</h3>
+          <p>Уникальные токены для искусства и коллекций.</p>
+        </div>
+        <div class="feature-card">
+          <h3>Стейкинг</h3>
+          <p>Получайте вознаграждения за участие в сети.</p>
+        </div>
+        <div class="feature-card">
+          <h3>DAO</h3>
+          <p>Управление проектами через децентрализованные организации.</p>
+        </div>
+      </div>
     </section>
 
     <section id="popular">
@@ -64,28 +239,53 @@
         <div class="coin-card">
           <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/1027.png" alt="Ethereum">
           <h3>Ethereum (ETH)</h3>
-          <p>Платформа для смарт-контрактов и децентрализованных приложений.</p>
+          <p>Платформа для смарт-контрактов.</p>
         </div>
         <div class="coin-card">
           <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/825.png" alt="Tether">
           <h3>Tether (USDT)</h3>
-          <p>Стейблкоин, привязанный к доллару США.</p>
+          <p>Стейблкоин, привязанный к доллару.</p>
         </div>
         <div class="coin-card">
           <img src="https://s2.coinmarketcap.com/static/img/coins/64x64/52.png" alt="XRP">
           <h3>XRP</h3>
-          <p>Монета для быстрых и дешёвых международных переводов.</p>
+          <p>Мгновенные международные переводы.</p>
         </div>
       </div>
     </section>
 
+    <section id="charts">
+      <h2>Динамика цен</h2>
+      <canvas id="priceChart"></canvas>
+    </section>
+
     <section id="contact">
       <h2>Контакты</h2>
-      <p>Напишите нам: <a href="mailto:info@example.com">info@example.com</a></p>
+      <p>Свяжитесь с нами: <a href="mailto:info@example.com">info@example.com</a></p>
     </section>
-  </main>
-  <footer>
-    <p>&copy; 2025 Криптовалюта. Все права защищены.</p>
-  </footer>
+
+    <footer>
+      <p>&copy; 2025 Крипто-Лендинг. Все права защищены.</p>
+    </footer>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    const ctx = document.getElementById('priceChart').getContext('2d');
+    new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: ['Янв', 'Фев', 'Мар', 'Апр', 'Май', 'Июн'],
+        datasets: [
+          { label: 'BTC', data: [30000, 32000, 28000, 40000, 35000, 45000], fill: false, borderColor: '#f39c12', tension: 0.3 },
+          { label: 'ETH', data: [1000, 1200, 900, 2000, 1800, 3000], fill: false, borderColor: '#3498db', tension: 0.3 }
+        ]
+      },
+      options: {
+        responsive: true,
+        scales: { y: { beginAtZero: false } }
+      }
+    });
+  </script>
 </body>
 </html>
